# flask

./: main.py  pyproject.toml  requirements.txt
data/: qa_pairs.csv
static/css/: interactive.css  navbar.css  qalist.css  style.css
templates/: homepage.html  interactive.html  navbar.html  qalist.html
