[tool.poetry]
name = "repl-nix-flask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_flask"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
